--- a/week 5/Section_one.html
+++ b/week 5/Section_one.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce</title>
-    <link rel="stylesheet" href="one.css">
+    <title>section-one</title>
+    <link rel="stylesheet" href="css/one.css">
 </head>
 <body>
+
     <div class="container">
-        <h1>Trust, the cornerstone of successful e-commerce</h1>
-        <div class="images">
-            <figure><img src="Images/imag.jpg" alt=""> <figcaption>ONE</figcaption></figure>
-            <figure><img src="Images/growth.jpg" alt=""><figcaption>TWO</figcaption></figure>
-            <figure><img src="Images/Ecommerce.jpg" alt=""><figcaption>THREE</figcaption></figure>
+
+        <div class="left-col">
+
+            <h1>E-Commerce</h1>
+            <h2>Trust, the cornerstone of successful e-commerce </h2>
+            
+            <div class="button"> 
+              <a href="#"> e-commerce key to sucess </a>
+            </div>
+        </div>
+        <div class="right-col">
+            <figure><img src="Images/Ecommerce.jpg" alt=""></figure>
         </div>
     </div>
+
 </body>
 </html>
